# visual-thermal-detection

fusion_rtsp/: CMakeLists.txt  README.md  build.sh  fusion.conf  fusion_alpha.conf  stream_RV1126.conf
fusion_rtsp/include/: fusion_config.h
fusion_rtsp/src/: fusion_streamer.cpp  fusion_streamer.h  main.cpp  main_snap.cpp  person_detector.cpp  person_detector.h
fusion_rtsp/src/camera/: camera.h  mipi_camera.c
manual_registration/: registration.py
reference/: build.sh
reference/src/: main.cpp  person_detector.cpp  person_detector.h
reference/src/camera/usb_camera/: clist.c  clist.h
thermal_rtsp/: CMakeLists.txt  build.sh
thermal_rtsp/include/: cmd.h
thermal_rtsp/src/: rtsp_streamer.cpp  sample.cpp
usb_stream_cmd/: stream_RV1126.conf
usb_stream_cmd/include/: data.h  sample.h
usb_stream_cmd/src/: rtsp_streamer.h
usb_stream_cmd/src/irsdk/: cmd.cpp  data.cpp
visual_rtsp_detection/: CMakeLists.txt
visual_rtsp_detection/include/: config.h  system.h
visual_rtsp_detection/src/: appSource.cpp  appSource.h
